[gd_scene load_steps=6 format=3 uid="uid://n87nhvob85pn"]

[ext_resource type="Texture2D" uid="uid://b7vutp6ly7tx6" path="res://sprites/cooldown_circle.png" id="1_7tibs"]
[ext_resource type="Script" path="res://scripts/buffs/buff.gd" id="1_1562j"]
[ext_resource type="Script" path="res://scripts/buffs/progress_bar.gd" id="3_kh3ky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbw68"]
bg_color = Color(0.243137, 0.180392, 0.180392, 0.341176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ied63"]
bg_color = Color(1, 1, 1, 0.6)

[node name="buff" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_left = 23.0
offset_top = 14.0
offset_right = 63.0
offset_bottom = 54.0
script = ExtResource("1_1562j")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 7.0
offset_right = 255.0
offset_bottom = 30.0
text = "Invert controls"

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(16, 22)
scale = Vector2(0.469697, 0.596154)
color = Color(0, 0.913725, 1, 1)
polygon = PackedVector2Array(-34, 16, -22.8741, -0.361572, 0, -34, 32, 18)

[node name="progress" type="TextureProgressBar" parent="."]
z_index = -1
layout_mode = 0
offset_left = -10.0
offset_top = -7.0
offset_right = 54.0
offset_bottom = 57.0
scale = Vector2(0.829453, 0.891727)
value = 100.0
fill_mode = 5
texture_progress = ExtResource("1_7tibs")
script = ExtResource("3_kh3ky")

[node name="duration" type="Timer" parent="progress"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="spark_button" type="Button" parent="."]
z_index = -2
layout_mode = 0
offset_left = -15.0
offset_top = -9.0
offset_right = 167.0
offset_bottom = 51.0
theme_override_styles/normal = SubResource("StyleBoxFlat_qbw68")
theme_override_styles/hover = SubResource("StyleBoxFlat_ied63")

[connection signal="timeout" from="progress/duration" to="." method="_on_duration_timeout"]
[connection signal="pressed" from="spark_button" to="." method="_on_spark_button_pressed"]
